- added spanish language - fixed language detector - updated libraries - minor improvements